--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -13,12 +13,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.5",
     "framer-motion": "^11.3.30",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-tooltip": "^5.28.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "react-tooltip": "^5.28.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
