--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-tooltip": "^5.28.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
