--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "react-tooltip": "^5.28.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0"
