--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^11.3.30",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
