--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -30,6 +30,8 @@
     "react-tooltip": "^5.28.0",
     "react-typewriter-effect": "^1.1.0",
     "redux-persist": "^6.0.0",
+    "simplebar": "^6.2.7",
+    "simplebar-react": "^3.2.6",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
