--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
+    "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.28.0",
     "react-typewriter-effect": "^1.1.0",
     "redux-persist": "^6.0.0",
