--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
+    "countries-list": "^3.1.1",
     "framer-motion": "^11.3.30",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
