--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -25,6 +25,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
