--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.7.5",
     "countries-list": "^3.1.1",
     "framer-motion": "^11.3.30",
