--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -23,6 +23,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
@@ -34,6 +35,7 @@
     "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.28.0",
     "react-typewriter-effect": "^1.1.0",
+    "react-use": "^17.5.1",
     "redux-persist": "^6.0.0",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
