--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dnd": "^16.0.1",
