plagiarism report download

--- a/AI-writer/package.json
+++ b/AI-writer/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.5",
     "countries-list": "^3.1.1",
     "framer-motion": "^11.3.30",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
